# a6_gaivotas_ccd2026

./: .gitignore  CMakeLists.txt  package.xml
launch/: apm_config.yaml  aruco.launch  mission.launch  mission_1 filter.launch  mission_1.launch  mission_1_gazebo.launch  mission_gazebo.launch
models/base_aruco_est1/: model.config  model.sdf
models/base_aruco_est1/materials/scripts/: textura.material
models/base_aruco_est2/: model.config  model.sdf
models/base_aruco_est2/materials/scripts/: textura.material
models/base_azul_m1/: model.config  model.sdf
models/base_azul_m1/materials/scripts/: textura.material
models/droneIFSC/: model.sdf
models/parede_branca_logo/: model.config  model.sdf
models/parede_branca_logo_curta/: model.config  model.sdf
models/parede_branca_logo_curta/materials/scripts/: logo.material
notebooks/: yolo-export-tflite.ipynb  yolo-pose-base-pouso.ipynb
scripts/: base_reader.py  camera_clientROS.py  camera_host_server.py  landing_target_sender.py  mission.py  rostopic_2_cv.py
scripts/ai_models/best_ncnn_model/: metadata.yaml  model.ncnn.param
scripts/ai_models/yolo11n/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
scripts/utils/: capture_topic.py  pt_2_ncnn.py  view_topic.py
worlds/: arena.world
